// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom title for one and two 1`] = `
<div
  class="ccmt-cff-Page-FormPage"
>
  <form
    class="rjsf"
    novalidate=""
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="container-fluid"
      >
        <span />
        <div />
        <div
          class="row"
        >
          <div
            class="form-group field field-array  col-12"
          >
            <fieldset
              class="field field-array field-array-of-string"
            >
              <h2
                class="ccmt-cff-form-title"
              >
                parents
              </h2>
              <div
                class="array-item-list"
              >
                <div
                  class="row mb-4"
                >
                  <div
                    class="col-9"
                  >
                    <h2
                      class="ccmt-cff-form-title"
                    >
                      Parent Info
                    </h2>
                    <div
                      class="form-group field field-string  col-12"
                    >
                      <div />
                      <input
                        class="form-control"
                        id="root_parents_0"
                        placeholder=""
                        required=""
                        type="text"
                        value=""
                      />
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="col-3 ccmt-cff-array-button-container"
                  />
                </div>
                <div
                  class="row mb-4"
                >
                  <div
                    class="col-9"
                  >
                    <h2
                      class="ccmt-cff-form-title"
                    >
                      Spouse Info
                    </h2>
                    <div
                      class="form-group field field-string  col-12"
                    >
                      <div />
                      <input
                        class="form-control"
                        id="root_parents_1"
                        placeholder=""
                        required=""
                        type="text"
                        value=""
                      />
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="col-3 ccmt-cff-array-button-container"
                  />
                </div>
                <button
                  class="btn btn-info col-12 ccmt-cff-btn-array-add"
                  type="button"
                >
                  Add
                </button>
              </div>
            </fieldset>
            <div />
            <div />
          </div>
        </div>
      </div>
      <div />
      <div />
    </div>
    <p>
      <button
        class="btn btn-info"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</div>
`;

exports[`renders object array with expand to maximum (two parents) 1`] = `
<div
  class="ccmt-cff-Page-FormPage"
>
  <form
    class="rjsf"
    novalidate=""
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="container-fluid"
      >
        <h2
          class="ccmt-cff-form-title"
        >
          Form
        </h2>
        <div />
        <div
          class="row"
        >
          <div
            class="form-group field field-array  col-12"
          >
            <fieldset
              class="field field-array field-array-of-object"
            >
              <h2
                class="ccmt-cff-form-title"
              >
                parents
              </h2>
              <div
                class="array-item-list"
              >
                <div
                  class="row mb-4"
                >
                  <div
                    class="col-9"
                  >
                    <div
                      class="form-group field field-object  col-12"
                    >
                      <div
                        class="container-fluid"
                      >
                        <span />
                        <div />
                        <div
                          class="row"
                        >
                          <div
                            class="form-group field field-string  col-12"
                          >
                            <label
                              class="control-label"
                              for="root_parents_0_email"
                            >
                              email
                              <span
                                class="required"
                              >
                                *
                              </span>
                            </label>
                            <input
                              class="form-control"
                              id="root_parents_0_email"
                              label="email"
                              placeholder=""
                              required=""
                              type="email"
                              value=""
                            />
                            <div />
                            <div />
                          </div>
                        </div>
                      </div>
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="col-3 ccmt-cff-array-button-container"
                  />
                </div>
                <div
                  class="row mb-4"
                >
                  <div
                    class="col-9"
                  >
                    <div
                      class="form-group field field-object  col-12"
                    >
                      <div
                        class="container-fluid"
                      >
                        <span />
                        <div />
                        <div
                          class="row"
                        >
                          <div
                            class="form-group field field-string  col-12"
                          >
                            <label
                              class="control-label"
                              for="root_parents_1_email"
                            >
                              email
                              <span
                                class="required"
                              >
                                *
                              </span>
                            </label>
                            <input
                              class="form-control"
                              id="root_parents_1_email"
                              label="email"
                              placeholder=""
                              required=""
                              type="email"
                              value=""
                            />
                            <div />
                            <div />
                          </div>
                        </div>
                      </div>
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="col-3 ccmt-cff-array-button-container"
                  >
                    <button
                      class="btn btn-danger col-12 ccmt-cff-btn-array-remove"
                      type="button"
                    >
                      Remove
                    </button>
                  </div>
                </div>
              </div>
            </fieldset>
            <div />
            <div />
          </div>
        </div>
      </div>
      <div />
      <div />
    </div>
    <p>
      <button
        class="btn btn-info"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</div>
`;

exports[`renders regular checkboxes correctly 1`] = `
<div
  class="ccmt-cff-Page-FormPage"
>
  <form
    class="rjsf"
    novalidate=""
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="container-fluid"
      >
        <h2
          class="ccmt-cff-form-title"
        >
          Form
        </h2>
        <div />
        <div
          class="row"
        >
          <div
            class="form-group field field-array  col-12"
          >
            <label
              class="control-label"
              for="root_interests"
            >
              Title interests Tell us about your interests
            </label>
            <div
              class="my-2"
              id="root_interests__description"
            >
              <div>
                Description interests blah blah blah
              </div>
            </div>
            <div
              class="checkboxes"
              id="root_interests"
            >
              <div
                class="checkbox "
              >
                <label>
                  <span>
                    <input
                      id="root_interests_0"
                      type="checkbox"
                    />
                    <span>
                      Art
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="checkbox "
              >
                <label>
                  <span>
                    <input
                      id="root_interests_1"
                      type="checkbox"
                    />
                    <span>
                      Singing
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="checkbox "
              >
                <label>
                  <span>
                    <input
                      id="root_interests_2"
                      type="checkbox"
                    />
                    <span>
                      Music
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="checkbox "
              >
                <label>
                  <span>
                    <input
                      id="root_interests_3"
                      type="checkbox"
                    />
                    <span>
                      Dance
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="checkbox "
              >
                <label>
                  <span>
                    <input
                      id="root_interests_4"
                      type="checkbox"
                    />
                    <span>
                      Sports
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="checkbox "
              >
                <label>
                  <span>
                    <input
                      id="root_interests_5"
                      type="checkbox"
                    />
                    <span>
                      Cooking
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="checkbox "
              >
                <label>
                  <span>
                    <input
                      id="root_interests_6"
                      type="checkbox"
                    />
                    <span>
                      Writing
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="checkbox "
              >
                <label>
                  <span>
                    <input
                      id="root_interests_7"
                      type="checkbox"
                    />
                    <span>
                      Coding
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div />
            <div />
          </div>
        </div>
      </div>
      <div />
      <div />
    </div>
    <p>
      <button
        class="btn btn-info"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</div>
`;

exports[`renders regular object array 1`] = `
<div
  class="ccmt-cff-Page-FormPage"
>
  <form
    class="rjsf"
    novalidate=""
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="container-fluid"
      >
        <h2
          class="ccmt-cff-form-title"
        >
          Form
        </h2>
        <div />
        <div
          class="row"
        >
          <div
            class="form-group field field-array  col-12"
          >
            <fieldset
              class="field field-array field-array-of-object"
            >
              <h2
                class="ccmt-cff-form-title"
              >
                parents
              </h2>
              <div
                class="array-item-list"
              >
                <div
                  class="row mb-4"
                >
                  <div
                    class="col-9"
                  >
                    <div
                      class="form-group field field-object  col-12"
                    >
                      <div
                        class="container-fluid"
                      >
                        <span />
                        <div />
                        <div
                          class="row"
                        >
                          <div
                            class="form-group field field-string  col-12"
                          >
                            <label
                              class="control-label"
                              for="root_parents_0_email"
                            >
                              email
                              <span
                                class="required"
                              >
                                *
                              </span>
                            </label>
                            <input
                              class="form-control"
                              id="root_parents_0_email"
                              label="email"
                              placeholder=""
                              required=""
                              type="email"
                              value=""
                            />
                            <div />
                            <div />
                          </div>
                        </div>
                      </div>
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="col-3 ccmt-cff-array-button-container"
                  />
                </div>
                <button
                  class="btn btn-info col-12 ccmt-cff-btn-array-add"
                  type="button"
                >
                  Add
                </button>
              </div>
            </fieldset>
            <div />
            <div />
          </div>
        </div>
      </div>
      <div />
      <div />
    </div>
    <p>
      <button
        class="btn btn-info"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</div>
`;

exports[`shows add button when minItems is zero 1`] = `
<div
  class="ccmt-cff-Page-FormPage"
>
  <form
    class="rjsf"
    novalidate=""
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="container-fluid"
      >
        <span />
        <div />
        <div
          class="row"
        >
          <div
            class="form-group field field-array  col-12"
          >
            <fieldset
              class="field field-array field-array-of-string"
            >
              <h2
                class="ccmt-cff-form-title"
              >
                children
              </h2>
              <div
                class="array-item-list"
              >
                <button
                  class="btn btn-info col-12 ccmt-cff-btn-array-add"
                  type="button"
                >
                  Add
                </button>
              </div>
            </fieldset>
            <div />
            <div />
          </div>
        </div>
      </div>
      <div />
      <div />
    </div>
    <p>
      <button
        class="btn btn-info"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</div>
`;

exports[`shows one child which can be removed 1`] = `
<div
  class="ccmt-cff-Page-FormPage"
>
  <form
    class="rjsf"
    novalidate=""
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="container-fluid"
      >
        <span />
        <div />
        <div
          class="row"
        >
          <div
            class="form-group field field-array  col-12"
          >
            <fieldset
              class="field field-array field-array-of-string"
            >
              <h2
                class="ccmt-cff-form-title"
              >
                children
              </h2>
              <div
                class="array-item-list"
              >
                <div
                  class="row mb-4"
                >
                  <div
                    class="col-9"
                  >
                    <div
                      class="form-group field field-string  col-12"
                    >
                      <label
                        class="control-label"
                        for="root_children_0"
                      >
                        My Item Here
                        <span
                          class="required"
                        >
                          *
                        </span>
                      </label>
                      <input
                        class="form-control"
                        id="root_children_0"
                        label="My Item Here"
                        placeholder=""
                        required=""
                        type="text"
                        value="[object Object]"
                      />
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="col-3 ccmt-cff-array-button-container"
                  >
                    <button
                      class="btn btn-danger col-12 ccmt-cff-btn-array-remove"
                      type="button"
                    >
                      Remove
                    </button>
                  </div>
                </div>
                <button
                  class="btn btn-info col-12 ccmt-cff-btn-array-add"
                  type="button"
                >
                  Add
                </button>
              </div>
            </fieldset>
            <div />
            <div />
          </div>
        </div>
      </div>
      <div />
      <div />
    </div>
    <p>
      <button
        class="btn btn-info"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</div>
`;
